Fix sizes and alignements of timeline's items

--- a/src/styles/_annexes.styl
+++ b/src/styles/_annexes.styl
@@ -194,7 +194,6 @@
 .timeline-item
   position relative
   margin-bottom $spacer
-  padding-left 15%
 
   &:first-child
     margin-left -5px
@@ -269,7 +268,6 @@
   font-family $ff-common
   font-size $fs-base
   font-weight $fw-bold
-  margin-top 4em
   color $clr-base
   text-transform none
 
